# cs50

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  hello_forever.c  string.c
source/hacker1/: credit.c  mario.c  my_lib.h  water.c
source/hacker2/: crack.c
source/hacker3/fifteen/: Makefile  fifteen.c  log.txt  saml.c  saml.h
source/hacker3/find/: Makefile  helpers.c
source/pset1/: greedy.c  mario.c
source/pset2/: caesar.c  initials.c  vigenere.c
source/pset3/fifteen/: fifteen.c  log.txt  questions.txt
source/pset3/find/: Makefile  find.c  generate.c  helpers.c
source/pset4/: CMakeLists.txt
source/pset4/recover/: CMakeLists.txt  recover.c
source/pset4/resize/: resize.c
source/pset4/whodunit/: questions.txt  whodunit.c
source/pset5/: CMakeLists.txt
source/pset5/speller/: CMakeLists.txt  Makefile  dict-tree_UnitTest.c  dict-trie.c  dict-trie.h  dictionary.c  dictionary.h  questions.txt
source/pset6/: crack.py  cracker.py  cracker_unit_test.py  run_crack.sh  sentiments.sh
source/testing/: memory_test.c
source/week4/: collatz.c  read-file.c  tests.c
